donate today done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,43 @@
 <body>
     <section class="banner-part">
         <div class="headline-area">
-            <h1>Let’s Help Those Who Are More In Need</h1>
+            <h1 class="headline">Let’s Help Those Who Are More In Need</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, sequi?</p>
-            <button>Donate Now</button>
+            <button class="btn">Donate Now</button>
+        </div>
+    </section>
+    <section class="donate-part">
+        <div class="donate-details">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, eveniet!</p>
+        </div>
+        <div class="money-range">
+            <div class="money">
+                <h2>100Tk</h2>
+            </div>
+            <div class="border-color">
+                <h2>200Tk</h2>
+            </div>
+            <div class="money">
+                <h2>500Tk</h2>
+            </div>
+            <div class="money">
+                <h2>1000Tk</h2>
+            </div>
+            <div class="money">
+                <h2>5000Tk</h2>
+            </div>
+        </div>
+        <div class="other">
+             <p>Other Amount (Taka)</p>
+             <hr>
+             <button class="btn">Donate Now</button>
+        </div>
+    </section>
+    <section class="our-donate-part">
+        <div class="donate-details">
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
         </div>
     </section>
 </body>
