--- a/index.html
+++ b/index.html
@@ -40,17 +40,43 @@
             </div>
         </div>
         <div class="other">
-             <p>Other Amount (Taka)</p>
-             <hr>
-             <button class="btn">Donate Now</button>
+            <p>Other Amount (Taka)</p>
+            <hr>
+            <button class="btn">Donate Now</button>
         </div>
     </section>
     <section class="our-donate-part">
         <div class="donate-details">
             <h1>Our Donate Plan</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="three_part">
+            <div class="one">
+                <img src="icons/food.png" alt="">
+                <h4>Food for a family</h4>
+                <p>I have had to make thousands of decisions in life like everyone else before. There is no chance of
+                    joining the programming hero and throwing ten common decisions in Qatar. Through this I want to take
+                    myself one step further.
+                    .</p>
+            </div>
+            <div class="one one_new">
+                <img src="icons/shelter.png" alt="">
+                <h4>Shelter for a family</h4>
+                <p>The only way to survive is to keep pace with the world. To fulfill one's dreams one needs financial
+                    prosperity. Self-satisfaction is needed with financial prosperity. I want to balance these two in my
+                    life..</p>
+            </div>
+            <div class="one last_one">
+                <img src="icons/Frame-1.png" alt="">
+                <h4>Education for a child</h4>
+                <p>I am Niloy Saha. My goal for 2022 is to create a position of my own in the world of programming and
+                    to build myself as an expert..</p>
+            </div>
         </div>
     </section>
+    
+
 </body>
 
 </html>
