--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             </div>
         </div>
     </section>
+    <footer id="footer">
+        <div class="footer_text">
+            <h1>Mission <span>2022</span></h1>
+            <p>Hard work, Perseverance, and Determination for 2022</p>
+        </div>
+    </footer>
     
 
 </body>
