--- a/index.html
+++ b/index.html
@@ -75,13 +75,24 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="donate-details">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+            animal noluisse, enim</p>
+        </div>
+        <div class="input-btn">
+            <input class="input" type="text" placeholder="Email"/>
+            <button class="button">Subscribe</button>
+          </div>
+    </section>
     <footer id="footer">
         <div class="footer_text">
             <h1>Mission <span>2022</span></h1>
             <p>Hard work, Perseverance, and Determination for 2022</p>
         </div>
     </footer>
-    
+
 
 </body>
 
