my section done

--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
             </div>
         </div>
     </section>
+    <!-- My Section -->
+      <section>
+        <section id="global">
+            <div class="global_text">
+                <h2>Know our Global Community</h2>
+                <p>Our programming hero community can be identified as a family.  However, the family is a very large family.  Where everyone's goal is to reach a place, to give yourself a position.  And everyone in our family is connected internationally.  And the king of this family is our dear brother Jhangkar.</p>
+                <a target="_blank" class="link" href="https://en.wikipedia.org/wiki/Bangladesh">Read the Documentation</a>
+            </div>
+            <div class="global_image">
+                <img src="images/donation3.jpg" alt="">
+            </div>
+    
+        </section>
+      </section>
+    <!-- End of my section -->
+    
     <section>
         <div class="donate-details">
             <h1>Get My Updates</h1>
