--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <section class="banner-part">
         <div class="headline-area">
             <h1 class="headline">Let’s Help Those Who Are More In Need</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, sequi?</p>
+            <p>Societal impacts and vulnerability to floods in Bangladesh</p>
             <button class="btn">Donate Now</button>
         </div>
     </section>
     <section class="donate-part">
         <div class="donate-details">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, eveniet!</p>
+            <p>Donations made to either fund support pledge payments made during Campaign 100. 2How much would you like
+                to donate?</p>
         </div>
         <div class="money-range">
             <div class="money">
@@ -48,8 +49,7 @@
     <section class="our-donate-part">
         <div class="donate-details">
             <h1>Our Donate Plan</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>Be a part of a global generosity movement and celebrate Giving Tuesday with your donation. Donate to transform lives with Next Ministries and help people experience a better life.</p>
         </div>
         <div class="three_part">
             <div class="one">
@@ -70,37 +70,46 @@
             <div class="one last_one">
                 <img src="icons/Frame-1.png" alt="">
                 <h4>Education for a child</h4>
-                <p>I am Niloy Saha. My goal for 2022 is to create a position of my own in the world of programming and
+                <p>I am Towhidur Rahman. My goal for 2022 is to create a position of my own in the world of programming and
                     to build myself as an expert..</p>
             </div>
         </div>
     </section>
     <!-- My Section -->
-      <section>
+    <section>
         <section id="global">
             <div class="global_text">
                 <h2>Know our Global Community</h2>
-                <p>Our programming hero community can be identified as a family.  However, the family is a very large family.  Where everyone's goal is to reach a place, to give yourself a position.  And everyone in our family is connected internationally.  And the king of this family is our dear brother Jhangkar.</p>
-                <a target="_blank" class="link" href="https://en.wikipedia.org/wiki/Bangladesh">Read the Documentation</a>
+                <p class="community">Our programming hero community can be identified as a family. However, the family is a very large
+                    family. Where everyone's goal is to reach a place, to give yourself a position. And everyone in our
+                    family is connected internationally. And the king of this family is our dear brother Jhangkar.</p>
+                <a target="_blank" class="link" href="https://en.wikipedia.org/wiki/Bangladesh">Read the
+                    Documentation</a>
             </div>
             <div class="global_image">
                 <img src="images/donation3.jpg" alt="">
             </div>
-    
+
         </section>
-      </section>
+    </section>
     <!-- End of my section -->
-    
+
     <section>
         <div class="donate-details">
             <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-            animal noluisse, enim</p>
+            <ol type="i">
+                <div class="type">
+                    <li>Open your phone's Settings app.</li>
+                    <li> Near the bottom, tap System. System update.</li>
+                    <li> You'll see your update status. Follow any steps on the screen.</li>
+                </div>
+            </ol>
+
         </div>
         <div class="input-btn">
-            <input class="input" type="text" placeholder="Email"/>
+            <input class="input" type="text" placeholder="Email" />
             <button class="button">Subscribe</button>
-          </div>
+        </div>
     </section>
     <footer id="footer">
         <div class="footer_text">
