--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Banner Part -->
     <section class="banner-part">
         <div class="headline-area">
             <h1 class="headline">Let’s Help Those Who Are More In Need</h1>
@@ -17,6 +18,10 @@
             <button class="btn">Donate Now</button>
         </div>
     </section>
+    <!--End Banner Part -->
+
+
+    <!-- Donate Part -->
     <section class="donate-part">
         <div class="donate-details">
             <h1>Donate Today</h1>
@@ -46,10 +51,14 @@
             <button class="btn">Donate Now</button>
         </div>
     </section>
+    <!--End Donate Part -->
+
+    <!-- Our Donate Plan -->
     <section class="our-donate-part">
         <div class="donate-details">
             <h1>Our Donate Plan</h1>
-            <p>Be a part of a global generosity movement and celebrate Giving Tuesday with your donation. Donate to transform lives with Next Ministries and help people experience a better life.</p>
+            <p>Be a part of a global generosity movement and celebrate Giving Tuesday with your donation. Donate to
+                transform lives with Next Ministries and help people experience a better life.</p>
         </div>
         <div class="three_part">
             <div class="one">
@@ -70,17 +79,21 @@
             <div class="one last_one">
                 <img src="icons/Frame-1.png" alt="">
                 <h4>Education for a child</h4>
-                <p>I am Towhidur Rahman. My goal for 2022 is to create a position of my own in the world of programming and
+                <p>I am Towhidur Rahman. My goal for 2022 is to create a position of my own in the world of programming
+                    and
                     to build myself as an expert..</p>
             </div>
         </div>
     </section>
+    <!--End Our Donate Plan -->
+
     <!-- My Section -->
     <section>
         <section id="global">
             <div class="global_text">
                 <h2>Know our Global Community</h2>
-                <p class="community">Our programming hero community can be identified as a family. However, the family is a very large
+                <p class="community">Our programming hero community can be identified as a family. However, the family
+                    is a very large
                     family. Where everyone's goal is to reach a place, to give yourself a position. And everyone in our
                     family is connected internationally. And the king of this family is our dear brother Jhangkar.</p>
                 <a target="_blank" class="link" href="https://en.wikipedia.org/wiki/Bangladesh">Read the
@@ -94,6 +107,7 @@
     </section>
     <!-- End of my section -->
 
+    <!-- Button Part -->
     <section>
         <div class="donate-details">
             <h1>Get My Updates</h1>
@@ -111,12 +125,17 @@
             <button class="button">Subscribe</button>
         </div>
     </section>
+    <!--End Button Part -->
+
+
+    <!-- Footer Part -->
     <footer id="footer">
         <div class="footer_text">
             <h1>Mission <span>2022</span></h1>
             <p>Hard work, Perseverance, and Determination for 2022</p>
         </div>
     </footer>
+    <!--End Footer Part -->
 
 
 </body>
